[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling tool using constrained decoding with LLMs"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
